NTP Promos: Fix dark mode colors and hover
- Text, icon and chevron foreground are all subtly different
- Explicitly set text color
- Fix hovering

This is manually tested across setup-list and individual tests, in light
and dark modes.

Sample screenshot:
https://screenshot.googleplex.com/Gpf67CtpdmVHgMT

Bug: 432494578
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6871842
Auto-Submit: Christopher Grant <cjgrant@chromium.org>
Commit-Queue: David Pennington <dpenning@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1504747}

--- a/chrome/browser/resources/new_tab_page/ntp_promo/individual_promos.css
+++ b/chrome/browser/resources/new_tab_page/ntp_promo/individual_promos.css
@@ -15,6 +15,7 @@
   --ntp-promo-foreground: var(--color-sys-on-surface);
   --ntp-promo-icon-background: var(--color-sys-tonal-container);
   --ntp-promo-icon-foreground: var(--color-sys-on-tonal-container);
+  --ntp-promo-action-icon-foreground: var(--color-sys-on-surface-subtle);
   --ntp-promo-icon-size: 40px;
   --ntp-promo-icon-image-size: 20px;
   --ntp-promo-padding: 16px;
@@ -40,6 +41,7 @@
   background-color: var(--ntp-promo-background);
   border: none;
   border-radius: var(--ntp-promo-border-radius);
+  color: var(--ntp-promo-foreground);
   cursor: pointer;
   display: flex;
   flex-direction: row;
@@ -86,7 +88,7 @@
 
   background-color: transparent;
   box-sizing: border-box;
-  color: var(--ntp-promo-icon-foreground);
+  color: var(--ntp-promo-action-icon-foreground);
   display: inline-block;
   flex: none;
   height: var(--ntp-promo-icon-size);
